# DoodleJump

./: CMakeLists.txt  Game.cpp  Game.hpp  Makefile  PlatformCtrl.h  Player.h  README.md  background.i  doodle_png.i  main.cpp  mainwindow.h  mainwindow.ui  util.cpp  util.hpp
